[metadata]
name = smaug
version = 0.0.1
summary = Application Data Protection as a Service for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    smaug
data_files =
    /etc/smaug =
        etc/api-paste.ini
        etc/policy.json
        etc/smaug.conf
    /etc/smaug/providers.d =
	etc/providers.d/openstack-infra.conf

[entry_points]
console_scripts =
    smaug-api = smaug.cmd.api:main
    smaug-manage = smaug.cmd.manage:main
    smaug-operationengine = smaug.cmd.operationengine:main
    smaug-protection = smaug.cmd.protection:main
smaug.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration
smaug.protections =
    smaug-swift-bank-plugin = smaug.services.protection.bank_plugins.swift_bank_plugin:SwiftBankPlugin
    smaug-volume-protection-plugin = smaug.services.protection.protection_plugins.volume.cinder_protection_plugin:CinderProtectionPlugin
    smaug-image-protection-plugin = smaug.services.protection.protection_plugins.image.image_protection_plugin:GlanceProtectionPlugin
smaug.provider =
    provider-registry = smaug.services.protection.provider:ProviderRegistry
smaug.protectables =
    project = smaug.services.protection.protectable_plugins.project:ProjectProtectablePlugin
    server = smaug.services.protection.protectable_plugins.server:ServerProtectablePlugin
    volume = smaug.services.protection.protectable_plugins.volume:VolumeProtectablePlugin
    image = smaug.services.protection.protectable_plugins.image:ImageProtectablePlugin
smaug.operationengine.engine.executor =
    executor = smaug.services.operationengine.engine.executors.thread_pool_executor:ThreadPoolExecutor

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = smaug/locale
domain = smaug

[update_catalog]
domain = smaug
output_dir = smaug/locale
input_file = smaug/locale/smaug.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = smaug/locale/smaug.pot
