[metadata]
name = karbor
summary = Application Data Protection as a Service for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/karbor
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    karbor
data_files =
    /etc/karbor =
        etc/api-paste.ini
        etc/policy.json
        etc/karbor.conf
    /etc/karbor/providers.d =
	etc/providers.d/openstack-infra.conf

[entry_points]
console_scripts =
    karbor-api = karbor.cmd.api:main
    karbor-manage = karbor.cmd.manage:main
    karbor-operationengine = karbor.cmd.operationengine:main
    karbor-protection = karbor.cmd.protection:main
karbor.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration
karbor.protections =
    karbor-swift-bank-plugin = karbor.services.protection.bank_plugins.swift_bank_plugin:SwiftBankPlugin
    karbor-volume-protection-plugin = karbor.services.protection.protection_plugins.volume.cinder_protection_plugin:CinderProtectionPlugin
    karbor-image-protection-plugin = karbor.services.protection.protection_plugins.image.image_protection_plugin:GlanceProtectionPlugin
    karbor-server-protection-plugin = karbor.services.protection.protection_plugins.server.nova_protection_plugin:NovaProtectionPlugin
karbor.provider =
    provider-registry = karbor.services.protection.provider:ProviderRegistry
karbor.protectables =
    project = karbor.services.protection.protectable_plugins.project:ProjectProtectablePlugin
    server = karbor.services.protection.protectable_plugins.server:ServerProtectablePlugin
    volume = karbor.services.protection.protectable_plugins.volume:VolumeProtectablePlugin
    image = karbor.services.protection.protectable_plugins.image:ImageProtectablePlugin
karbor.operationengine.engine.executor =
    executor = karbor.services.operationengine.engine.executors.thread_pool_executor:ThreadPoolExecutor

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = karbor/locale
domain = karbor

[update_catalog]
domain = karbor
output_dir = karbor/locale
input_file = karbor/locale/karbor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = karbor/locale/karbor.pot
